--- a/Versión en C/Makefile
+++ b/Versión en C/Makefile
@@ -8,10 +8,10 @@ FLAGS = -g -ffreestanding -falign-jumps -falign-functions \
         -Wall -O2 -Iinc
 
 all: ./bin/boot.bin ./bin/kernel.bin
-	rm -rf ./bin/os.bin
-	dd if=./bin/boot.bin >> ./bin/os.bin
-	dd if=./bin/kernel.bin >> ./bin/os.bin
-	dd if=/dev/zero bs=512 count=100 >> ./bin/os.bin
+	rm -rf ./bin/HuguiniOS.img
+	dd if=./bin/boot.bin >> ./bin/HuguiniOS.img
+	dd if=./bin/kernel.bin >> ./bin/HuguiniOS.img
+	dd if=/dev/zero bs=512 count=100 >> ./bin/HuguiniOS.img
 	
 ./bin/kernel.bin: $(FILES)
 	i686-linux-gnu-ld -g --relocatable ./build/kernel.asm.o ./build/kernel.o -o ./bin/kernelfull.o
@@ -29,6 +29,6 @@ all: ./bin/boot.bin ./bin/kernel.bin
  clean:
 	rm -rf ./bin/boot.bin
 	rm -rf ./bin/kernel.bin
-	rm -rf ./bin/os.bin
+	rm -rf ./bin/HuguiniOS.img
 	rm -rf ${FILES}
 	rm -rf ./build/kernelfull.o
