--- a/Versión en C/Makefile
+++ b/Versión en C/Makefile
@@ -1,4 +1,4 @@
-FILES = ./build/kernel.asm.o ./build/kernel.o ./build/idt/idt.asm.o ./build/idt/idt.o ./build/memory/memory.o
+FILES = ./build/kernel.asm.o ./build/kernel.o ./build/idt/idt.asm.o ./build/idt/idt.o ./build/memory/memory.o ./build/io/io.asm.o
 INCLUDES = -I./src
 FLAGS = -g -ffreestanding -fno-pic -fno-pie -no-pie \
         -falign-jumps -falign-functions -falign-labels \
@@ -6,6 +6,9 @@ FLAGS = -g -ffreestanding -fno-pic -fno-pie -no-pie \
         -finline-functions -Wno-unused-function -Wno-cpp \
         -Wno-unused-parameter -nostdlib -nostartfiles \
         -nodefaultlibs -Wall -O2 -Iinc
+
+DIRS = ./build ./bin ./build/io ./build/idt ./build/memory
+$(shell mkdir -p $(DIRS))
 
 all: ./bin/boot.bin ./bin/kernel.bin
 	rm -rf ./bin/HuguiniOS.img
@@ -38,6 +41,9 @@ all: ./bin/boot.bin ./bin/kernel.bin
 
 ./build/memory/memory.o: ./src/memory/memory.c
 	i686-linux-gnu-gcc $(INCLUDES) -I./src/memory $(FLAGS) -std=gnu99 -c ./src/memory/memory.c -o ./build/memory/memory.o
+	
+./build/io/io.asm.o: ./src/io/io.asm
+	nasm -f elf -g ./src/io/io.asm -o ./build/io/io.asm.o
 	
  clean:
 	rm -rf ./bin/boot.bin
